@@ -2,7 +2,7 @@
  /**
  * This file is part of phpMorphy library
  *
- * Copyright c 2007 Kamaev Vladimir <phpmorphy@ya.ru>
+ * Copyright c 2007 Kamaev Vladimir <heromantor@users.sourceforge.net>
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -21,7 +21,7 @@
  */
 
 /**
- * This file is autogenerated at Sun, 24 Jun 2007 02:29:30 +0400, don`t change it!
+ * This file is autogenerated at Thu, 02 Aug 2007 02:01:07 +0400, don`t change it!
  */
 class phpMorphy_Fsa_Sparse_Shm extends phpMorphy_Fsa {
 	function walk($trans, $word, $readAnnot = true) {
@@ -217,5 +217,5 @@ class phpMorphy_Fsa_Sparse_Shm extends phpMorphy_Fsa {
 		
 		return $this->alphabet_num;
 	}
-	var $alphabet_num; 
+	protected $alphabet_num; 
 }
