@@ -21,7 +21,7 @@
  */
 
 /**
- * This file is autogenerated at Fri, 30 Mar 2007 04:07:59 +0400, don`t change it!
+ * This file is autogenerated at Thu, 02 Aug 2007 02:04:58 +0400, don`t change it!
  */
 class phpMorphy_Graminfo_Mem extends phpMorphy_Graminfo {
 	function readGramInfoHeader($offset) {
